grammar.txt
Getting a taste of cynther

expr := binary
       |unary
       |primary

binary:= comparison
	|equality
	|term
	|factor

comparison:= equality (> | < | <= | >=) comparison*
equality:= term ( (== | !=) equality) *
term:= factor ((+ | -) term)*
factor:= unary ((* | /) factor)*
unary:= ((! | -) unary)* | primary
primary:= bool | int | double | string | ( expression )
